src/examples/errors/13_array_index_type.veri
// Error: Array index must be integer
// Expected error: E001 - Type mismatch (expected int)

fn main() {
    let arr: [int; 5] = [0; 5];
    let x: int = arr[true];
}
